examples/test/testpolicy751.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy751
  namespace: namespace22
spec:
  podSelector:
    matchLabels:
      key3: value6
      key15: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value5
          key44: value15
      podSelector:
        matchLabels:
          key44: value16
